--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">⚡ EV Charging Hub</a>
+            <a class="navbar-brand" href="/">EV Charging Hub</a>
             <span class="badge bg-info">Prototype – Phase 1 Architecture Demo</span>
         </div>
     </nav>
