--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -49,9 +49,9 @@
                                 <div class="col-md-3 mb-3">
                                     <label class="form-label">Charger Type</label>
                                     <select class="form-select" id="chargerType">
-                                        <option value="DC Fast">DC Fast</option>
-                                        <option value="Level 2" selected>Level 2</option>
-                                        <option value="Level 1">Level 1</option>
+                                        <option value="DC Fast">⚡ DC Fast</option>
+                                        <option value="Level 2" selected>🔌 Level 2</option>
+                                        <option value="Level 1">🔋 Level 1</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3 mb-3">
