--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,20 @@
     <title>EV Charging Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="/public/css/modern.css">
 </head>
-<body class="bg-white">
+    <body class="bg-white modern-ui">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
         <div class="container-lg">
-            <a class="navbar-brand fw-bold" href="/">
-                <span style="color: #2ecc71; font-size: 1.5rem;">⚡</span>
-                <span style="color: #2c3e50;">EV Charging Hub</span>
+            <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="/">
+                <span class="brand-icon" aria-hidden="true">⚡</span>
+                <span class="brand-text">Energy Share</span>
             </a>
-            <span class="badge bg-info me-3" style="margin: 0 auto;">Prototype - Phase 1 Architecture Demo</span>
+            <span class="badge bg-info me-3">Prototype - Phase 1 Architecture Demo</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,20 +37,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero-section py-5 py-md-6 text-center" style="background: white; border-bottom: 1px solid #e9ecef;">
+        <div class="hero-section py-5 py-md-6 text-center modern-hero">
         <div class="container-lg">
             <div class="row align-items-center">
                 <div class="col-lg-8 mx-auto">
-                    <div style="font-size: 4rem; margin-bottom: 1.5rem; color: #2ecc71;">⚡</div>
-                    <h1 class="display-5 fw-bold mb-3" style="color: #2c3e50;">EV Charging Hub</h1>
-                    <p class="fs-5 text-muted mb-4" style="line-height: 1.6;">Track energy usage. Measure your green impact.</p>
+                        <div class="hero-top">
+                            <div class="hero-icon" aria-hidden="true">⚡</div>
+                            <h1 class="display-5 fw-bold mb-3 hero-title">EV Charging Hub</h1>
+                        </div>
+                        <p class="fs-5 text-muted mb-4 hero-sub">Track energy usage. Measure your green impact.</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                        <a href="/public/login.html" class="btn btn-success btn-lg px-5" style="background-color: #2ecc71; border-color: #2ecc71; font-weight: 600; font-size: 1.1rem;">
-                            🚗 User Login
-                        </a>
-                        <a href="/public/owner-login.html" class="btn btn-outline-success btn-lg px-5" style="color: #2ecc71; border-color: #2ecc71; font-weight: 600; font-size: 1.1rem;">
-                            🏢 Owner Login
-                        </a>
+                            <a href="/public/login.html" class="btn btn-cta btn-lg px-5">
+                                🚗 User Login
+                            </a>
+                            <a href="/public/owner-login.html" class="btn btn-outline-cta btn-lg px-5">
+                                🏢 Owner Login
+                            </a>
                     </div>
                 </div>
             </div>
@@ -57,60 +63,60 @@
     <div class="container-lg py-5">
         <div class="row g-4">
             <div class="col-md-6 col-lg-4">
-                <div class="p-4 bg-white border rounded-3" style="border-color: #e9ecef;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem; color: #2ecc71;">📍</div>
-                    <h5 class="fw-bold mb-2" style="color: #2c3e50; font-size: 1.2rem;">Find Chargers</h5>
-                    <p class="text-muted mb-0" style="font-size: 1rem; line-height: 1.5;">Discover EV charging stations near you on an interactive map</p>
+                    <div class="p-4 bg-white border rounded-3 feature-card">
+                        <div class="feature-icon">📍</div>
+                        <h5 class="fw-bold mb-2 feature-title">Find Chargers</h5>
+                        <p class="text-muted mb-0 feature-text">Discover EV charging stations near you on an interactive map</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="p-4 bg-white border rounded-3" style="border-color: #e9ecef;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem; color: #2ecc71;">📅</div>
-                    <h5 class="fw-bold mb-2" style="color: #2c3e50; font-size: 1.2rem;">Quick Booking</h5>
-                    <p class="text-muted mb-0" style="font-size: 1rem; line-height: 1.5;">Book charging slots instantly with real-time availability</p>
+                    <div class="p-4 bg-white border rounded-3 feature-card">
+                        <div class="feature-icon">📅</div>
+                        <h5 class="fw-bold mb-2 feature-title">Quick Booking</h5>
+                        <p class="text-muted mb-0 feature-text">Book charging slots instantly with real-time availability</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="p-4 bg-white border rounded-3" style="border-color: #e9ecef;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem; color: #2ecc71;">🌱</div>
-                    <h5 class="fw-bold mb-2" style="color: #2c3e50; font-size: 1.2rem;">Green Impact</h5>
-                    <p class="text-muted mb-0" style="font-size: 1rem; line-height: 1.5;">Track your environmental impact and compete on the leaderboard</p>
+                    <div class="p-4 bg-white border rounded-3 feature-card">
+                        <div class="feature-icon">🌱</div>
+                        <h5 class="fw-bold mb-2 feature-title">Green Impact</h5>
+                        <p class="text-muted mb-0 feature-text">Track your environmental impact and compete on the leaderboard</p>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Dual Role Section -->
-    <div class="bg-light py-5" style="background-color: #f8f9fa; border-top: 1px solid #e9ecef; border-bottom: 1px solid #e9ecef;">
+    <div class="dual-role-section py-5">
         <div class="container-lg">
-            <h2 class="text-center fw-bold mb-4" style="color: #2c3e50; font-size: 1.8rem;">Two Ways to Get Involved</h2>
+            <h2 class="text-center fw-bold mb-4 section-title">Two Ways to Get Involved</h2>
             <div class="row g-4">
                 <div class="col-md-6">
-                    <div class="p-5 bg-white rounded-3 border" style="border-color: #e9ecef; text-align: center;">
-                        <div style="font-size: 2.5rem; margin-bottom: 1rem;">👤</div>
-                        <h5 class="fw-bold mb-3" style="color: #2c3e50; font-size: 1.3rem;">EV Users</h5>
-                        <ul class="text-muted mb-4" style="list-style: none; padding: 0; font-size: 1rem; line-height: 1.8;">
+                    <div class="p-5 bg-white rounded-3 border role-card text-center">
+                        <div class="role-icon">👤</div>
+                        <h5 class="fw-bold mb-3 role-title">EV Users</h5>
+                        <ul class="text-muted mb-4 role-list">
                             <li>✓ Find nearby chargers on the map</li>
                             <li>✓ See real-time availability</li>
                             <li>✓ Book slots instantly</li>
                             <li>✓ Earn green points</li>
                             <li>✓ Track your environmental impact</li>
                         </ul>
-                        <a href="/public/login.html" class="btn btn-success" style="background-color: #2ecc71; border-color: #2ecc71; font-weight: 600;">Get Started</a>
+                        <a href="/public/login.html" class="btn btn-cta">Get Started</a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="p-5 bg-white rounded-3 border" style="border-color: #e9ecef; text-align: center;">
-                        <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏢</div>
-                        <h5 class="fw-bold mb-3" style="color: #2c3e50; font-size: 1.3rem;">Station Owners</h5>
-                        <ul class="text-muted mb-4" style="list-style: none; padding: 0; font-size: 1rem; line-height: 1.8;">
+                    <div class="p-5 bg-white rounded-3 border role-card text-center">
+                        <div class="role-icon">🏢</div>
+                        <h5 class="fw-bold mb-3 role-title">Station Owners</h5>
+                        <ul class="text-muted mb-4 role-list">
                             <li>✓ List your charging stations</li>
                             <li>✓ Manage availability</li>
                             <li>✓ View booking statistics</li>
                             <li>✓ Track usage metrics</li>
                             <li>✓ Support the EV community</li>
                         </ul>
-                        <a href="/public/owner-login.html" class="btn btn-outline-success" style="color: #2ecc71; border-color: #2ecc71; font-weight: 600;">List Your Station</a>
+                        <a href="/public/owner-login.html" class="btn btn-outline-cta">List Your Station</a>
                     </div>
                 </div>
             </div>
@@ -118,9 +124,9 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-white border-top py-4" style="border-color: #e9ecef;">
+    <footer class="bg-white border-top py-4 site-footer">
         <div class="container-lg text-center">
-            <p class="text-muted mb-0" style="font-size: 0.95rem;">© 2026 EV Charging Hub. Sustainable energy for tomorrow.</p>
+            <p class="text-muted mb-0 footer-note">© 2026 EV Charging Hub. Sustainable energy for tomorrow.</p>
         </div>
     </footer>
 
